# stow

./: .gitignore  CMakeLists.txt  LICENSE  README.md
bak/: Makefile  config.mk
include/: config.h  error.hpp  pipeprocess.hpp  process.hpp  ptyprocess.hpp  xwindow.hpp
src/: stow.c  stow.cpp
test/: CMakeLists.txt  test_process.cpp  test_stow.cpp  test_xwindow.cpp
